# hrprtc-grx-cvprocessor

./: .hg_archival.txt  CMakeLists.txt  ChangeLog  CvProcessor.cpp  CvProcessor.h  CvProcessorComp.cpp  CvProcessorService.idl  CvProcessorService_impl.cpp  CvProcessorService_impl.h  ProjectHome.md  config.sh  cvadjuster.py  cvtest.py  exec.sh  exec_head.sh  face.py  gen.sh  irex2011_hironx.conf  irex2011_parm.conf  pickdemo.py  rtc.conf  rtc_head.conf  slider.py  vision.py
